--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Noirea | Cosméticos de alta calidad</title>
-  <link rel="icon" type="image/png" href="assets/logo.png" />
   <!-- Tailwind via CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -17,7 +16,7 @@
   <header class="sticky top-0 z-50 bg-black/90 backdrop-blur">
     <div class="container mx-auto px-4 py-4 flex items-center justify-between">
       <div class="flex items-center">
-        <img src="assets/logo.png" alt="Logo Noirea" class="h-10 mr-2" />
+        <img src="logo.png" alt="Logo Noirea" class="h-10 mr-2" />
       </div>
       <div class="flex items-center space-x-4">
         <button id="cart-button" class="relative p-2 text-[#C6A664] hover:text-[#b39d59]">
